--- a/second.html
+++ b/second.html
@@ -81,8 +81,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_7bf3e"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BTCEUR/?exchange=COINBASE" rel="noopener" target="_blank"><span class="blue-text">BTCEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 				{
 					"width": 1000,
@@ -107,8 +107,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_8d15f"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/ETHEUR/?exchange=COINBASE" rel="noopener" target="_blank"><span class="blue-text">ETHEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 			{
 					"width": 1000,
@@ -133,8 +133,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_01831"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/SOLEUR/?exchange=EIGHTCAP" rel="noopener" target="_blank"><span class="blue-text">SOLEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 			{
 					"width": 1000,
@@ -159,8 +159,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_e96c0"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/DOTEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">DOTEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 			{
 					"width": 1000,
@@ -185,8 +185,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_8cf4d"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/LUNAEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">LUNAEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 			{
 					"width": 1000,
@@ -211,8 +211,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_a5f66"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/MATICEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">MATICEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 			{
 					"width": 1000,
@@ -237,8 +237,8 @@
 			<div class="tradingview-widget-container">
 			<div id="tradingview_e0b54"></div>
 			<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/ENJEUR/?exchange=BINANCE" rel="noopener" target="_blank"><span class="blue-text">ENJEUR Chart</span></a> by TradingView</div>
-			<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-			<script type="text/javascript">
+			<script src="https://s3.tradingview.com/tv.js"></script>
+			<script>
 			new TradingView.widget(
 			{
 					"width": 1000,
