--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 		
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -40,10 +40,18 @@
   	</head>
 
 <body>
-<header>	
+<header>
 	<div class="header">
-		<img class="left-image" src="/bull.png" alt="lambo bull.png" width=200>
+		<div class="row">
+		<div class="col-sm-2" style=text-align:center">
+		<div class="harmaa">
+		<img class="left-image" src="/bull.png" alt="lambo bull.png" width=180>
+		</div>
+		</div>
+		<div class="col-sm-10">
 		<div style="text-align:center">Kryptokyttääjä</div>
+		</div>
+		</div>
 	</div>
 </header>
 
