--- a/third.html
+++ b/third.html
@@ -40,12 +40,19 @@
   	</head>
 
 <body>
-<header>	
-	<div class="header">
-		<img class="left-image" src="/bull.png" alt="lambo bull.png" width=200>
-		<div style="text-align:center">Kryptokyttääjä</div>
-	</div>
-</header>
+    <header>
+        <div class="header">
+            <div class="row">
+            <div class="col-sm-2" style=text-align:center">
+            <img class="left-image" src="/bull.png" alt="lambo bull.png" width=180>
+            </div>
+            <div class="col-sm-10">
+            <div style="text-align:center">Kryptokyttääjä</div>
+            </div>
+            </div>
+        </div>
+    </header>
+    
 
 <div class="container.fluid">
 	<div class="row">
