--- a/third.html
+++ b/third.html
@@ -43,7 +43,7 @@
     <header>
         <div class="header">
             <div class="row">
-            <div class="col-sm-2" style=text-align:center">
+            <div class="col-sm-2" style=text-align:center>
             <img class="left-image" src="/bull.png" alt="lambo bull.png" width=180>
             </div>
             <div class="col-sm-10">
