--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 				
 						<video class="center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
 						</video>
-						<h2 style="text-align:center;">Katso video äänet päällä</h2>
-						<h2 style="text-align:center;">Pakollinen varoitus:</h2>
+						<h2 style="text-align:center;">Katso video äänet päällä</h2><br><br>
+						<h1 style="text-align:center;">Yleistä kryptoista:</h1>
 						<br>	
 						
 						<div class="row">
