--- a/tableform.html
+++ b/tableform.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<table style="text-align: left;">
+<table>
     <caption>Harjoitustaulukko</caption>
     <tr>
     <th>Mitä</th><th>Miksi</th><th>Milloin</th>
@@ -18,13 +18,23 @@
     <tr>
     <td>Jotain</td><td>Siksi</td><td>Jolloinkin</td>
     </tr>
+    <tr>
+    <td>Jotain</td><td>Siksi</td><td>Jolloinkin</td>
+    </tr>
+    <tr>
+    <td>Jotain</td><td>Siksi</td><td>Jolloinkin</td>
+    </tr>
+            
 
 </table>
-
+<br>
+<br>
 <footer>
     <div class="footer">
-(c) Joakim 2021
+    (c) Joakim 2021
     </div>
-    </footer>
+</footer>
+
 </body>
+
 </html>
