--- a/tableform.html
+++ b/tableform.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <h1>Taitteli</h1>
+
 <table>
     <caption>Harjoitustaulukko</caption>
     <tr>
@@ -24,9 +26,8 @@
     <tr>
     <td>Jotain</td><td>Siksi</td><td>Jolloinkin</td>
     </tr>
-            
-
 </table>
+
 <br>
 <br>
 <footer>
