--- a/index-test.html
+++ b/index-test.html
@@ -42,20 +42,20 @@
 <body>
 <header>
 
-	<div class="header center">
+	<div class="header">
 		<div class="row">
 		<div class="col-sm-3">
-		<img class="img-fluid" src="/bull.png" alt="Lambo bull" width=150>
+		<img src="/bull.png" class="img-fluid center" style="background-color:powderblue; align-content: center;" alt="Lambo bull" width=150>
 		</div>
 		<div class="col-sm-9">
-		<div class="display-1">Kryptokyttääjä</div>
+		<div class="display-1 center" style="background-color:green; align-content: center;">Kryptokyttääjä</div>
 		</div>
 		</div>
 	</div>
 </header>
 
 	<div class="row">
-		<div class="col-sm-12" style="text-align: center;">
+		<div class="col-sm-12" style="text-align: center; background-color: greenyellow;">
 			<nav>
 				<a HREF="index.html">Etusivu</a>
 				<a HREF="second.html">Kryptot</a>
@@ -67,7 +67,7 @@
 		</div>
 
 		<div class="col-sm-3">
-			<div class="menyy center" style="position:fixed;">
+			<div class="menyy center" style="background-color: hotpink;">
 				<nav>
 				<a HREF="index.html">Etusivu</a><br>
 				<a HREF="second.html">Kryptot</a><br>
@@ -75,12 +75,11 @@
 				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
 				<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
 				</nav>
-				<br>
 				<img src="/bitcoin-logo.png" class="img-fluid" alt="Bitcoin" width=150>
 			</div>
 		</div>
 
-		<div class="col-sm-9">
+		<div class="col-sm-9" style=background-color:lightgrey>
 			
 				
 						<video class="img-fluid center" controls poster="/lambo-start2.jpg">  <source src="/final-countdown.mp4" type="video/mp4">
