--- a/second.html
+++ b/second.html
@@ -39,46 +39,46 @@
   			<title>Kryptokyttääjä</title>
   	</head>
 
-<body>
-	<header>
-		<div class="header">
+	<body>
+		<header>
+		
+			<div class="header">
+				<div class="row">
+				<div class="col-sm-3">
+				<img src="/bull.png" class="img-fluid center" style="align-content: center;" alt="Lambo bull" width=150>
+				</div>
+				<div class="col-sm-9">
+				<div class="display-1 center" style="align-content: center;">Kryptokyttääjä</div>
+				</div>
+				</div>
+			</div>
+		</header>
+		
 			<div class="row">
-			<div class="col-sm-2" style=text-align:center>
-			<img class="left-image" src="/bull.png" alt="lambo bull.png" width=180>
-			</div>
-			<div class="col-sm-10">
-			<div style="text-align:center">Kryptokyttääjä</div>
-			</div>
-			</div>
-		</div>
-	</header>
+				<div class="col-sm-12" style="text-align: center;">
+					<nav>
+						<a HREF="index.html">Etusivu</a>
+						<a HREF="second.html">Kryptot</a>
+						<a HREF="third.html">Yleistä</a>
+						<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
+						<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+						<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
+					</nav>
+				</div>
+		
+				<div class="col-sm-3">
+					<div class="menyy center">
+						<nav>
+						<a HREF="index.html">Etusivu</a><br>
+						<a HREF="second.html">Kryptot</a><br>
+						<a HREF="third.html">Yleistä</a><br>
+						<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+						<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+						</nav>
+						<img src="/bitcoin-logo.png" class="img-fluid" alt="Bitcoin" width=150>
+					</div>
+				</div>
 	
-
-	<div class="row">
-		<div class="col-sm-12" style="text-align: center;">
-			<nav>
-				<a HREF="index.html">Etusivu</a>
-				<a HREF="second.html">Kryptot</a>
-				<a HREF="third.html">Yleistä</a>
-				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
-				<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-				<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
-			</nav>
-		</div>
-
-		<div class="col-sm-3">
-			<div class="menyy" style="position:fixed; left:0;">
-				<nav>
-				<a HREF="index.html">Etusivu</a><br>
-				<a HREF="second.html">Kryptot</a><br>
-				<a HREF="third.html">Yleistä</a><br>
-				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
-				<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
-				</nav>
-				<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
-			</div>
-		</div>
-
 		<div class="col-sm-9">
 			<div class="kolumni1">
 				<section>
