--- a/third.html
+++ b/third.html
@@ -39,46 +39,53 @@
   			<title>Kryptokyttääjä</title>
   	</head>
 
-<body>
-    <header>
-        <div class="header">
-            <div class="row">
-            <div class="col-sm-2" style=text-align:center>
-            <img class="left-image" src="/bull.png" alt="lambo bull.png" width=180>
-            </div>
-            <div class="col-sm-10">
-            <div style="text-align:center">Kryptokyttääjä</div>
-            </div>
-            </div>
-        </div>
-    </header>
-    
-
-<div class="container.fluid">
-	<div class="row">
-		<div class="col-sm-12" style="text-align: center;">
-			<nav>
-				<a HREF="index.html">Etusivu</a>
-				<a HREF="second.html">Kryptot</a>
-				<a HREF="third.html">Yleistä</a>
-				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
-				<a HREF="http://www.binance.com/" target="_blank">Binance</a>
-				<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
-			</nav>
-		</div>
-
-		<div class="col-sm-3">
-			<div class="menyy" style="position:fixed; left:0;">
-				<nav>
-				<a HREF="index.html">Etusivu</a><br>
-				<a HREF="second.html">Kryptot</a><br>
-				<a HREF="third.html">Yleistä</a><br>
-				<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
-				<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
-				</nav>
-				<img style="padding-top:6vh;" src="/bitcoin-logo.png" alt="bitcoin-logo" width=200>
+	  <body>
+		<header>
+			<div class="header">
+				<div class="row" style="border-bottom: solid rgb(30, 30, 30) 1px;">
+					<div class="col-sm-3 center2">
+						<img class="img-fluid" style="align-content:center; text-align: center;" src="/bull.png" alt="Lambo bull" width=150>
+					</div>
+					<div class="col-sm-9 center2">
+						<div class="display-1" style="align-content:center; text-align: center;">Kryptomania</div>
+					</div>
+				</div>
+		
+		
+		
+				<div class="row">
+					<div class="col-sm-12" style="align-content:center; text-align: center; border-bottom: solid rgb(30, 30, 30) 1px;">
+						<nav>
+							<a HREF="index.html">Etusivu</a>
+							<a HREF="second.html">Kryptot</a>
+							<a HREF="third.html">Yleistä</a>
+							<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a>
+							<a HREF="http://www.binance.com/" target="_blank">Binance</a>
+							<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
+						</nav>
+					</div>
+				</div>
 			</div>
-		</div>
+		</header>
+		
+			<div class="row">
+				<div class="col-sm-3" style="align-content:center; text-align: center; border-right: solid rgb(30, 30, 30) 1px;">
+					<div class="sticky-top">
+					<nav>
+						<a HREF="index.html">Etusivu</a><br>
+						<a HREF="second.html">Kryptot</a><br>
+						<a HREF="third.html">Yleistä</a><br>
+						<a HREF="http://www.coingecko.com/" target="_blank">CoinGecko</a><br>
+						<a HREF="http://www.binance.com/" target="_blank">Binance</a><br>
+						<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a><br>
+					</nav>
+					<br>
+					<img src="/bitcoin-logo.png" class="img-fluid" alt="Bitcoin" width=150><br>
+					Kävijää:<br>
+					<a href="http://laskuri.omasivu.fi/"><img src="http://laskuri.omasivu.fi/5cebb4906634e3db42bfb2d5c80731c8ebcd678e/3575.gif" alt="kavijalaskuri"></a>
+					</div>
+				</div>
+		
 
 		<div class="col-sm-4">
         <div class="kolumni1-2">
