--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
 			</div>
 		</div>
 
-
-
 		<div class="row">
 			<div class="col-sm-12" style="align-content:center; text-align: center; border-bottom: solid rgb(30, 30, 30) 1px;">
 				<nav>
@@ -64,7 +62,7 @@
 					<a HREF="https://kryptokyttaaja.boards.net/" target="_blank">Keskustelu</a>
 				</nav>
 			</div>
-		</div>
+		</div>		  
 	</div>
 </header>
 
@@ -87,7 +85,8 @@
 		</div>
 
 		<div class="col-sm-9">
-			<video class="img-fluid center" poster="/lambo-start2.jpg"><source src="/final-countdown.mp4" type="video/mp4">
+			<video class=img-fluid poster="/lambo-start2.jpg" controls>
+			<source src="/final-countdown.mp4" type="video/mp4">
 			</video>
 			<h2 style="text-align:center;">Katso video äänet päällä</h2><br><br>
 			
